actualizacion de package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portafolio",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Mi Portafolio",
   "main": "index.html",
   "scripts": {
@@ -10,7 +10,10 @@
     "html",
     "css",
     "portafolio",
-    "javascript"
+    "javascript",
+    "Flex",
+    "Grid",
+    "Fetch"
   ],
   "author": "Marco Velasquez Figarella",
   "license": "ISC"
