--- a/package.json
+++ b/package.json
@@ -1,36 +1,19 @@
 {
-  "name": "portafolio",
-  "private": true,
-  "version": "3.0.0",
+  "name": "portafoliov4",
   "type": "module",
-  "author": "MArco Velasquez Figarella",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@emailjs/browser": "^3.11.0",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1",
-    "sort-by": "^1.2.0",
-    "styled-components": "6.0.0-rc.1",
-    "transition-hook": "^1.5.2"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "@astrojs/check": "^0.9.3",
+    "@astrojs/tailwind": "^5.1.1",
+    "astro": "^5.0.0-beta.2",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.2"
   }
 }
