--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@emailjs/browser": "^4.4.1",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
-    "astro": "^5.0.0-beta.2",
+    "astro": "^4.16.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.13",
