feat: alemento faltante

--- a/.netlify/v1/config.json
+++ b/.netlify/v1/config.json
@@ -1,1 +1,1 @@
-{"images":{"remote_images":["https?://skillicons\\.dev/.*","https?://raw\\.githubusercontent\\.com/.*"]},"headers":[{"for":"/_astro/*","values":{"Cache-Control":"public, max-age=31536000, immutable"}}]}
+{"images":{"remote_images":["https?://skillicons\\.dev/.*","https?://raw\\.githubusercontent\\.com/.*","https?://github\\.com/.*"]},"headers":[{"for":"/_astro/*","values":{"Cache-Control":"public, max-age=31536000, immutable"}}]}
