--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,9 @@
       "@data/*": [
         "src/data/*"
       ],
+      "@i18n/*": [
+        "src/i18n/*"
+      ],
       "src/*": [
         "src/*"
       ]
